--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/louis-mclaughlin/gameobjects-gameplay3d.git
 [submodule "external/GamePlay"]
 	path = external/GamePlay
-	url = https://github.com/louis-mclaughlin/GamePlay.git
+	url = https://github.com/gameplay3d/GamePlay.git
