Moved misc automation scripts into their own directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ ENDIF (TARGET_OS STREQUAL "LINUX")
 # this by creating symlinks in the build folder that point the actual resources in the parent folder.
 if(WIN32)
     if(NOT EXISTS "game.config")
-        execute_process(COMMAND cmd /C "${CMAKE_SOURCE_DIR}/mklink_win32.bat ${TARGET_OS_DIR}")
+        execute_process(COMMAND cmd /C "${CMAKE_SOURCE_DIR}/raw/automation/mklink_win32.bat ${TARGET_OS_DIR}")
     endif()
 else()
     if(NOT EXISTS res)
