--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,7 +145,7 @@ set(GAME_CONFIG ./build/game.config)
 set(ANDROID ./android/AndroidManifest.xml ./android/build.xml ./android/res/values/strings.xml ./android/jni/Android.mk ./android/jni/Application.mk)
 file(GLOB RAW_LEVELS ./raw/levels/*)
 file(GLOB RAW_SPRITESHEETS ./raw/spritesheets/*)
-file(GLOB RAW_TEMPLATES ./raw/templates/*)
+file(GLOB RAW_AUTOMATION ./raw/automation/*)
 file(GLOB RES_AUDIO ./res/audio/*.audio)
 file(GLOB RES_LUA ./res/lua/*.lua)
 file(GLOB RES_LUA_TOOLS ./res/lua/tools/*)
@@ -164,7 +164,7 @@ set(SG_ANDROID "android")
 set(SG_GAME_SRC "src")
 set(SG_GAME_CONFIG "res")
 set(SG_RAW_LEVELS "raw/levels")
-set(SG_RAW_TEMPLATES "raw/templates")
+set(SG_RAW_AUTOMATION "raw/templates")
 set(SG_RAW_SPRITESHEETS "raw/spritesheets")
 set(SG_RES_AUDIO "res/audio")
 set(SG_RES_LUA "res/lua")
@@ -188,7 +188,7 @@ if(WIN32)
     add_source_group(${SG_GAME_SRC} "${GAME_SRC}")
     add_source_group(${SG_GAME_CONFIG} "${GAME_CONFIG}")
     add_source_group(${SG_RAW_LEVELS} "${RAW_LEVELS}")
-    add_source_group(${SG_RAW_TEMPLATES} "${RAW_TEMPLATES}")
+    add_source_group(${SG_RAW_AUTOMATION} "${RAW_AUTOMATION}")
     add_source_group(${SG_RAW_SPRITESHEETS} "${RAW_SPRITESHEETS}")
     add_source_group(${SG_RES_AUDIO} "${RES_AUDIO}")
     add_source_group(${SG_RES_LUA} "${RES_LUA}")
@@ -205,7 +205,7 @@ else()
     add_source_group(${SG_GAME_SRC} ${GAME_SRC})
     add_source_group(${SG_GAME_CONFIG} ${GAME_CONFIG})
     add_source_group(${SG_RAW_LEVELS} ${RAW_LEVELS})
-    add_source_group(${SG_RAW_TEMPLATES} ${RAW_TEMPLATES})
+    add_source_group(${SG_RAW_AUTOMATION} ${RAW_AUTOMATION})
     add_source_group(${SG_RAW_SPRITESHEETS} ${RAW_SPRITESHEETS})
     add_source_group(${SG_RES_AUDIO} ${RES_AUDIO})
     add_source_group(${SG_RES_LUA} ${RES_LUA})
@@ -234,7 +234,7 @@ add_executable(${GAME_NAME}
     ${RES_PHYSICS}
     ${RES_LUA}
     ${RES_LUA_TOOLS}
-    ${RAW_TEMPLATES}
+    ${RAW_AUTOMATION}
     ${RES_UI}
     ${RES_SHADERS}
 )
