Highlighted manditory variable assignment for android tools in game.config

--- a/game.config
+++ b/game.config
@@ -56,6 +56,7 @@ debug_enable_tools = false
 // The game will exit immediately after tools have been run
 debug_run_tools_only = false
 
+// You must assign these values in order to use the android tools
 debug_android_sdk_tools_dir = <insert_path>
 debug_android_ndk_dir = <insert_path>
 
