Added debug options to toggle draw culling and enemy spawn

--- a/game.config
+++ b/game.config
@@ -43,7 +43,11 @@ debug_draw_physics = false
 // The amount of miliseconds to display an assert on the screen before the game crashes
 debug_assert_timeout_ms = 0
 // Draw position coordinates per characters
-debug_draw_character_positions=false
+debug_draw_character_positions = false
+// Apply camera zoom when calculating draw culling
+debug_enable_zoom_draw_culling = true
+// Enable enemy character spawn
+debug_enable_enemy_spawn = true
 
 //---------------------------------------------------------------------------------------------------------
 //---------------------------------------------Tools-------------------------------------------------------
