--- a/game.config
+++ b/game.config
@@ -48,6 +48,10 @@ debug_draw_character_positions = false
 debug_enable_zoom_draw_culling = true
 // Enable enemy character spawn
 debug_enable_enemy_spawn = true
+// Draw the area that the camera is constrained to and targeted at
+debug_draw_camera = false
+debug_camera_target_boundary_colour = 0, 0, 0, 0.5
+debug_camera_target_position_colour = 1, 1, 0, 0.5
 
 //---------------------------------------------------------------------------------------------------------
 //---------------------------------------------Tools-------------------------------------------------------
