Unit to pixel scale changed from 100:1 to 32:1 to reduce fp precision loss. Simplified camera smooth

--- a/game.config
+++ b/game.config
@@ -46,12 +46,9 @@ debug_assert_timeout_ms = 0
 debug_draw_character_positions = false
 // Apply camera zoom when calculating draw culling
 debug_enable_zoom_draw_culling = true
-// Enable enemy character spawn
 debug_enable_enemy_spawn = true
-// Draw the area that the camera is constrained to and targeted at
-debug_draw_camera = false
-debug_camera_target_boundary_colour = 0, 0, 0, 0.5
-debug_camera_target_position_colour = 1, 1, 0, 0.5
+debug_draw_camera_target = false
+debug_camera_target_colour = 1, 1, 0, 0.5
 
 //---------------------------------------------------------------------------------------------------------
 //---------------------------------------------Tools-------------------------------------------------------
