Fixed source group filter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,7 +164,7 @@ set(SG_ANDROID "android")
 set(SG_GAME_SRC "src")
 set(SG_GAME_CONFIG "res")
 set(SG_RAW_LEVELS "raw/levels")
-set(SG_RAW_AUTOMATION "raw/templates")
+set(SG_RAW_AUTOMATION "raw/automation")
 set(SG_RAW_SPRITESHEETS "raw/spritesheets")
 set(SG_RES_AUDIO "res/audio")
 set(SG_RES_LUA "res/lua")
