--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -7,14 +7,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         
     <!-- This is the platform API where the app was introduced. -->
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="16" />
 	<uses-feature android:glEsVersion="0x00020000"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:hasCode="true">
 
         <!-- Our activity is the built-in NativeActivity framework class.
              This will take care of integrating with our NDK code. -->
-        <activity android:name="android.app.NativeActivity"
+        <activity android:name="org.gameplay3d.GamePlayNativeActivity"
                 android:label="@string/app_name"
                 android:configChanges="orientation|keyboardHidden"
 				android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
