--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,9 +261,11 @@ else()
     # Enable C++11
     set(CMAKE_CXX_FLAGS "-std=c++11")
     add_definitions(-lstdc++)
+    set(CMAKE_C_COMPILER_INIT g++)
 endif()
 
-add_subdirectory(${PLATFORMER_EXT_LIBS_PATH}/${GAMEPLAY_LIB_DIR_NAME})
+set(GAMEPLAY_VERSION 3.0.0)
+add_subdirectory(${PLATFORMER_EXT_LIBS_PATH}/${GAMEPLAY_LIB_DIR_NAME}/gameplay)
 add_subdirectory(${PLATFORMER_EXT_LIBS_PATH}/${GAMEOBJECTS_LIB_DIR_NAME})
 add_dependencies(${GAME_NAME} ${GAMEPLAY_LIB_NAME} ${GAMEOBJECTS_LIB_NAME})
 target_link_libraries(${GAME_NAME} ${GAMEPLAY_LIB_NAME} ${GAMEPLAY_LIBRARIES} ${GAMEOBJECTS_LIB_NAME})
