Added support for interactive objects

--- a/game.config
+++ b/game.config
@@ -24,6 +24,7 @@ aliases
     res/textures/player = res/textures/player.png
     res/textures/splash = res/textures/splash.png
     res/textures/bg = res/textures/bg.png
+    res/textures/interactables = res/textures/interactables.png
 }
 
 scripts
