Xbox 360 pad support enabled by default on windows builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,7 @@ IF (TARGET_OS STREQUAL "LINUX")
 ELSEIF (TARGET_OS STREQUAL "WINDOWS")
     set(GAMEPLAY_LIBRARIES ${GAMEPLAY_LIBRARIES} "OpenGL32")
     set(GAMEPLAY_LIBRARIES ${GAMEPLAY_LIBRARIES} "GLU32")
+    set(GAMEPLAY_LIBRARIES ${GAMEPLAY_LIBRARIES} "XInput")
     ADD_DEFINITIONS(-D_ITERATOR_DEBUG_LEVEL=2)
 ENDIF (TARGET_OS STREQUAL "LINUX")
 
@@ -257,6 +258,7 @@ if(MSVC)
     add_definitions(/MP)
     add_definitions(/Gm-)
     add_definitions(-DUNICODE)
+    add_definitions(-DGP_USE_GAMEPAD)
 else()
     # Enable C++11
     set(CMAKE_CXX_FLAGS "-std=c++11")
