Added ability to disable level rendering in debug

--- a/game.config
+++ b/game.config
@@ -51,6 +51,7 @@ debug_enable_zoom_draw_culling = true
 debug_enable_enemy_spawn = true
 debug_draw_camera_target = false
 debug_camera_target_colour = 1, 1, 0, 0.5
+debug_enabled_level_rendering=true
 
 //---------------------------------------------------------------------------------------------------------
 //---------------------------------------------Tools-------------------------------------------------------
