Added ability to use unlimited jump in non final

--- a/game.config
+++ b/game.config
@@ -36,22 +36,17 @@ scripts
 //---------------------------------------------Debug only--------------------------------------------------
 //---------------------------------------------------------------------------------------------------------
 
-// The font that will be used to display any debug text
 debug_font = res/fonts/debug.gpb
-// Displays an fps counter in the corner of the screen
 debug_show_fps = false
-// Draws the physics wireframes
 debug_draw_physics = false
-// The amount of miliseconds to display an assert on the screen before the game crashes
 debug_assert_timeout_ms = 0
-// Draw position coordinates per characters
 debug_draw_character_positions = false
-// Apply camera zoom when calculating draw culling
 debug_enable_zoom_draw_culling = true
 debug_enable_enemy_spawn = true
 debug_draw_camera_target = false
 debug_camera_target_colour = 1, 1, 0, 0.5
-debug_enabled_level_rendering=true
+debug_enable_level_rendering= true
+debug_enable_unlimited_jump= false
 
 //---------------------------------------------------------------------------------------------------------
 //---------------------------------------------Tools-------------------------------------------------------
