Added collectable assets

--- a/game.config
+++ b/game.config
@@ -25,6 +25,7 @@ aliases
     res/textures/splash = res/textures/splash.png
     res/textures/bg = res/textures/bg.png
     res/textures/interactables = res/textures/interactables.png
+    res/textures/collectables = res/textures/collectables.png
 }
 
 scripts
