--- a/game.config
+++ b/game.config
@@ -42,6 +42,7 @@ debug_assert_timeout_ms = 0
 debug_draw_character_positions = false
 debug_enable_zoom_draw_culling = true
 debug_enable_enemy_spawn = true
+debug_enable_collectables_spawn = true
 debug_draw_camera_target = false
 debug_camera_target_colour = 1, 1, 0, 0.5
 debug_enable_level_rendering= true
