--- a/game.config
+++ b/game.config
@@ -26,6 +26,8 @@ aliases
     res/textures/bg = res/textures/bg.png
     res/textures/interactables = res/textures/interactables.png
     res/textures/collectables = res/textures/collectables.png
+    res/textures/water = res/textures/water.png
+    res/textures/water-noise = res/textures/water-noise.png
 }
 
 scripts
