--- a/game.config
+++ b/game.config
@@ -39,6 +39,7 @@ scripts
 
 debug_font = res/fonts/debug.gpb
 debug_show_fps = false
+debug_show_resolution = true
 debug_draw_physics = false
 debug_assert_timeout_ms = 0
 debug_draw_character_positions = false
