Enabled fps counter by default

--- a/game.config
+++ b/game.config
@@ -38,7 +38,7 @@ scripts
 // Debug only game options
 
 debug_font = res/fonts/debug.gpb
-debug_show_fps = false
+debug_show_fps = true
 debug_show_resolution = true
 debug_draw_physics = false
 debug_assert_timeout_ms = 0
