Reduced level load times by caching properties

--- a/game.config
+++ b/game.config
@@ -30,6 +30,16 @@ aliases
     res/textures/water-noise = res/textures/water-noise.png
 }
 
+properties_directories
+{
+    res/audio = true
+    res/gameobjects = false
+    res/levels = false
+    res/physics = true
+    res/scenes = false
+    res/spritesheets = false
+}
+
 scripts
 {
     initialize = res/lua/platformer.lua#initialize
@@ -40,7 +50,7 @@ scripts
 debug_font = res/fonts/debug.gpb
 debug_show_fps = true
 debug_show_resolution = true
-debug_draw_physics = false
+debug_draw_physics = true
 debug_assert_timeout_ms = 0
 debug_draw_character_positions = false
 debug_draw_player_velocity = false
