Disabled debug physics drawing

--- a/game.config
+++ b/game.config
@@ -50,7 +50,7 @@ scripts
 debug_font = res/fonts/debug.gpb
 debug_show_fps = true
 debug_show_resolution = true
-debug_draw_physics = true
+debug_draw_physics = false
 debug_assert_timeout_ms = 0
 debug_draw_character_positions = false
 debug_draw_player_velocity = false
