Loading now animated by spinning logo, slow tasks divided into smaller ones that can be interleaved with a display update

--- a/game.config
+++ b/game.config
@@ -22,12 +22,25 @@ aliases
     res/textures/enemies = res/textures/enemies.png
     res/textures/environment = res/textures/environment.png
     res/textures/player = res/textures/player.png
-    res/textures/splash = res/textures/splash.png
+    res/textures/screen = res/textures/screen.png
     res/textures/bg = res/textures/bg.png
     res/textures/interactables = res/textures/interactables.png
     res/textures/collectables = res/textures/collectables.png
     res/textures/water = res/textures/water.png
     res/textures/water-noise = res/textures/water-noise.png
+}
+
+boot
+{
+    textures
+    {
+        @res/textures/screen
+    }
+
+    spritesheets
+    {
+        res/spritesheets/screen.ss
+    }
 }
 
 properties_directories
