Added form for pause/mute

--- a/game.config
+++ b/game.config
@@ -17,7 +17,7 @@ aliases
     res/textures = res/textures
     res/textures/gamepad = res/textures/gamepad.png
     res/textures/enemy = res/textures/enemy.png
-    res/textures/gamepad = res/textures/gamepad.png
+    res/textures/options = res/textures/options.png
     res/textures/tiles = res/textures/tiles.png
     res/textures/enemies = res/textures/enemies.png
     res/textures/environment = res/textures/environment.png
