--- a/game.config
+++ b/game.config
@@ -84,5 +84,6 @@ debug_generate_android = false
 debug_num_android_compile_jobs=4
 debug_build_android=false
 debug_deploy_android=false
+debug_crush_pngs=false
 
 debug_os = <assigned_at_runtime>
