--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "external/GamePlay"]
 	path = external/GamePlay
 	url = https://github.com/gameplay3d/GamePlay.git
+[submodule "external/pngcrush/repo"]
+	path = external/pngcrush/repo
+	url = git://git.code.sf.net/p/pmt/code
+	branch = pngcrush
