--- a/android/build.xml
+++ b/android/build.xml
@@ -53,9 +53,7 @@
       <copy todir="assets/res">
           <fileset dir="../res" />
       </copy>
-      <copy todir="assets/res/shaders">
-          <fileset dir="../external/GamePlay/gameplay/res/shaders" />
-      </copy>
+      <delete dir="assets/res/lua"/>
       <copy todir="assets">
           <fileset file="../game.config" />
       </copy>
