--- a/game.config
+++ b/game.config
@@ -85,5 +85,6 @@ debug_num_android_compile_jobs=4
 debug_build_android=false
 debug_deploy_android=false
 debug_crush_pngs=false
+debug_convert_json=false
 
 debug_os = <assigned_at_runtime>
