Fixed bug where some textures were being loaded twice

--- a/game.config
+++ b/game.config
@@ -19,8 +19,7 @@ aliases
     res/textures/enemy = res/textures/enemy.png
     res/textures/options = res/textures/options.png
     res/textures/tiles = res/textures/tiles.png
-    res/textures/enemies = res/textures/enemies.png
-    res/textures/environment = res/textures/environment.png
+    res/textures/enemies = res/textures/enemy.png
     res/textures/player = res/textures/player.png
     res/textures/screen = res/textures/screen.png
     res/textures/bg = res/textures/bg.png
