--- a/game.config
+++ b/game.config
@@ -46,6 +46,7 @@ properties_directories
 {
     res/audio = true
     res/levels = false
+    res/parallax = false
     res/physics = true
     res/scenes = false
     res/spritesheets = false
