Added support for flagging textures that need to use mip maps, added mip maps to player texture to reduce aliasing when zooming

--- a/game.config
+++ b/game.config
@@ -52,6 +52,11 @@ properties_directories
     res/spritesheets = false
 }
 
+mip_maps
+{
+    @res/textures/player
+}
+
 // Debug only game options
 
 debug_font = res/fonts/debug.gpb
