--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,12 +128,14 @@ else()
     endif()
     if(NOT EXISTS game.config)
         execute_process(COMMAND ln -s ../game.config game.config)
+        execute_process(COMMAND ln -s ../user.config user.config)
         execute_process(COMMAND ln -s ../../../game.config bin/${TARGET_OS_DIR}/game.config)
+        execute_process(COMMAND ln -s ../../../user.config bin/${TARGET_OS_DIR}/user.config)
     endif()
 endif()
 
 # A listing of all the project files
-set(GAME_CONFIG ./build/game.config .gitignore)
+set(GAME_CONFIG ./build/game.config ./build/user.config .gitignore)
 set(ANDROID ./android/AndroidManifest.xml ./android/build.xml ./android/res/values/strings.xml ./android/jni/Android.mk ./android/jni/Application.mk)
 file(GLOB RAW_LEVELS ./raw/levels/*)
 file(GLOB RAW_SPRITESHEETS ./raw/spritesheets/*)
