--- a/android/build.xml
+++ b/android/build.xml
@@ -57,6 +57,9 @@
       <copy todir="assets">
           <fileset file="../game.config" />
       </copy>
+      <copy todir="assets">
+          <fileset file="../user.config" />
+      </copy>
       <mkdir dir="../src/org/gameplay3d"/>
       <copy todir="../src/org/gameplay3d">
         <fileset dir="../external/GamePlay/gameplay/src/org/gameplay3d"/>
