Gameobjects now use property cache

--- a/game.config
+++ b/game.config
@@ -45,6 +45,7 @@ boot
 properties_directories
 {
     res/audio = true
+    res/gameobjects = false
     res/levels = false
     res/parallax = false
     res/physics = true
