Added support for OSX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,10 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
     ADD_DEFINITIONS(-D__linux__)
     SET(TARGET_OS "LINUX")
     SET(TARGET_OS_DIR "linux")
+ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    ADD_DEFINITIONS(-D__APPLE__)
+    SET(TARGET_OS "MACOSX")
+    SET(TARGET_OS_DIR "macosx")
 ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
     IF(MSVC)
         ADD_DEFINITIONS(-DMSVC)
@@ -93,23 +97,33 @@ include_directories(
 
 append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "gameplay-deps" "libs")
 
-IF (TARGET_OS STREQUAL "LINUX")
-    append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "GL" "")
+IF (NOT TARGET_OS STREQUAL "WINDOWS")
     append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "m" "" )
-    append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "X11" "")
-    append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "dl" "")
-    append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "rt" "" )
+    append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "dl" "")    
     append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "pthread" "" )
-    append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "gtk-x11-2.0" "" )
-    append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "gobject-2.0" "" )
-    append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "glib-2.0" "" )
 
-ELSEIF (TARGET_OS STREQUAL "WINDOWS")
+    IF (TARGET_OS STREQUAL "LINUX")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "GL" "")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "X11" "")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "glib-2.0" "" )
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "rt" "" )
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "gtk-x11-2.0" "" )
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "gobject-2.0" "" )
+    ELSE()
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "AppKit" "")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "CoreVideo" "")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "GameKit" "")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "Foundation" "")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "IOKit" "")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "OpenAL" "")
+        append_gameplay_ext_lib(GAMEPLAY_LIBRARIES "OpenGL" "")
+    ENDIF(TARGET_OS STREQUAL "LINUX")
+ELSE()
     set(GAMEPLAY_LIBRARIES ${GAMEPLAY_LIBRARIES} "OpenGL32")
     set(GAMEPLAY_LIBRARIES ${GAMEPLAY_LIBRARIES} "GLU32")
     set(GAMEPLAY_LIBRARIES ${GAMEPLAY_LIBRARIES} "XInput")
     ADD_DEFINITIONS(-D_ITERATOR_DEBUG_LEVEL=2)
-ENDIF (TARGET_OS STREQUAL "LINUX")
+ENDIF (NOT TARGET_OS STREQUAL "WINDOWS")
 
 # CMake recommends that you generate projects that are 'out of source' meaning that you create a 'build'
 # folder in the top level directory that doesn't pollute the original src directory with project/CMake specific data.
@@ -118,22 +132,21 @@ ENDIF (TARGET_OS STREQUAL "LINUX")
 # we want to have to copy any resource changes to the build folder everytime we change something. We can get around
 # this by creating symlinks in the build folder that point the actual resources in the parent folder.
 if(WIN32)
-    if(NOT EXISTS "game.config")
-        execute_process(COMMAND cmd /C "${CMAKE_SOURCE_DIR}/raw/automation/mklink_win32.bat ${TARGET_OS_DIR}")
-    endif()
+    execute_process(COMMAND cmd /C "${CMAKE_SOURCE_DIR}/raw/automation/mklink_win32.bat ${TARGET_OS_DIR}")
 else()
-    if(NOT EXISTS res)
-        execute_process(COMMAND ln -s ../res res)
-        execute_process(COMMAND ln -s ../../../res bin/${TARGET_OS_DIR}/res)
-    endif()
-    if(NOT EXISTS game.config)
-        execute_process(COMMAND ln -s ../game.config game.config)
-        execute_process(COMMAND ln -s ../user.config user.config)
-        execute_process(COMMAND ln -s ../default_user.config default_user.config)
-        execute_process(COMMAND ln -s ../../../game.config bin/${TARGET_OS_DIR}/game.config)
-        execute_process(COMMAND ln -s ../../../user.config bin/${TARGET_OS_DIR}/user.config)
-        execute_process(COMMAND ln -s ../../../default_user.config bin/${TARGET_OS_DIR}/default_user.config)
-    endif()
+    execute_process(COMMAND mkdir -p bin/${TARGET_OS_DIR}/Contents/Resources)
+    execute_process(COMMAND ln -s ../res res)
+    execute_process(COMMAND ln -s ../../../res bin/${TARGET_OS_DIR}/res)
+    execute_process(COMMAND ln -s ../../../../../res bin/${TARGET_OS_DIR}/Contents/Resources/res)
+    execute_process(COMMAND ln -s ../game.config game.config)
+    execute_process(COMMAND ln -s ../user.config user.config)
+    execute_process(COMMAND ln -s ../default_user.config default_user.config)
+    execute_process(COMMAND ln -s ../../../game.config bin/${TARGET_OS_DIR}/game.config)
+    execute_process(COMMAND ln -s ../../../user.config bin/${TARGET_OS_DIR}/user.config)
+    execute_process(COMMAND ln -s ../../../default_user.config bin/${TARGET_OS_DIR}/default_user.config)
+    execute_process(COMMAND ln -s ../../../../../game.config bin/${TARGET_OS_DIR}/Contents/Resources/game.config)
+    execute_process(COMMAND ln -s ../../../../../user.config bin/${TARGET_OS_DIR}/Contents/Resources/user.config)
+    execute_process(COMMAND ln -s ../../../../../default_user.config bin/${TARGET_OS_DIR}/Contents/Resources/default_user.config)
 endif()
 
 # A listing of all the project files
@@ -249,7 +262,9 @@ if(MSVC)
 else()
     # Enable C++11
     set(CMAKE_CXX_FLAGS "-std=c++11")
-    add_definitions(-lstdc++)
+    if(CMAKE_SYSTEM_NAME MATCHES "Linux")
+        add_definitions(-lstdc++)
+    endif(CMAKE_SYSTEM_NAME MATCHES "Linux")
     set(CMAKE_C_COMPILER_INIT g++)
 endif()
 
